--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title >Page Title</title>
 </head>
 <body>
-<h1 id='title'>This is a Heading</h1>
+<h1 id='title' class="btn">This is a Heading</h1>
 <p>This is a paragraph.</p>
 <script src="index.js"></script>
 </body>
