--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <title >Page Title</title>
 </head>
 <body>
-<h1 id='title' class="btn">This is a Heading</h1>
+<div class = "js-clock">
+	<h1 class = "js-clock">00:00</h1>
+</div>
 <p>This is a paragraph.</p>
-<script src="index.js"></script>
+<script src="clock.js"></script>
 </body>
 </html>
